<resources>
    <string name="app_name">Final Project</string>
    <string name="navigation_drawer_open">Open navigation drawer </string>
    <string name="navigation_drawer_close">Close navigation drawer </string>
    <string name="pupil_site">Pupil Site</string>
    <string name="teacher_site">Teacher Site</string>
    <string name="tasks">Tasks</string>
    <string name="how_to_play">How To Play</string>
    <string name="start_game">Start Game</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name...</string>
    <string name="getPin">Your pin number is:</string>
    <string name="your_pin_number_is">Your pin number is:</string>
    <string name="would_you_like_to_keep_your_pin_or_change_it">  Would you like to keep your pin or change it?</string>
    <string name="keep_pin">Keep Pin</string>
    <string name="change_pin">change pin</string>
    <string name="choose_a_sensible_pin_number_be_careful_not_to_forget_it">Choose a sensible pin number. Be careful not to forget it!</string>
    <string name="submit_pin">Submit Pin</string>
    <string name="enter_new_pin_number">Enter New Pin Number</string>
    <string name="confirm_pin_number">Confirm Pin Number</string>
    <string name="roll">roll</string>
    <string name="credit_card">Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="get_help">Get Help</string>
    <string name="ask_for_advice">Ask For Advice</string>
    <string name="ask_for_help">Ask For Help</string>
    <string name="game_codes">Game Codes</string>
    <string name="see_current_games">See Current Games</string>
    <string name="publish_questions">Publish Questions</string>
    <string name="pound_sign"> £ </string>
    <string name="textview">TextView</string>
    <string name="credit_information">Credit Information</string>
</resources>
