<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_debitcard"
            android:icon="@drawable/credit_card_basic"
            android:title="@string/debit_card" />

        <item android:id="@+id/nav_creditcard"
            android:icon="@drawable/credit_card_basic"
            android:title="@string/credit_card" />
        <item android:id="@+id/nav_cash"
            android:icon="@drawable/credit_card_basic"
            android:title="cash" />
    </group>

    <item android:title="@string/credit_information">
        <menu>
            <item android:id="@+id/nav_interestinfo"
                android:icon="@drawable/credit_card_basic"
                android:title="Interest" />

            <item android:id="@+id/nav_repaycreditwithdebit"
                android:icon="@drawable/credit_card_basic"
                android:title="Pay off credit from debit" />

            <item android:id="@+id/nav_repaycreditwithcash"
                android:icon="@drawable/credit_card_basic"
                android:title="Pay off credit with cash" />
        </menu>

    </item>


</menu>